--- a/src/main/resources/templates/logged/projeto/cadastro.html
+++ b/src/main/resources/templates/logged/projeto/cadastro.html
@@ -21,7 +21,7 @@
 				<span th:utext="${mensagem}"></span>
 			</div>
 
-			<div class="row">
+			<div class="row gy-3">
 				<div class="col-sm-4  form-group">
 					<label>Nome projeto</label>
 					<input type="text" th:field="*{nomeProjeto}" class="form-control" autofocus="autofocus" />
@@ -31,12 +31,12 @@
 					<label>Data início</label>
 					<input type="text" th:field="*{{dataInicio}}" class="form-control datepicker" autocomplete="off" />
 				</div>
-				
+
 				<div class="col-sm-2 form-group">
 					<label>Data final</label>
 					<input type="text" th:field="*{{dataFim}}" class="form-control datepicker" autocomplete="off" />
 				</div>
-				
+
 				<div class="col-sm-2  form-group">
 					<label>Responsável</label>
 					<input type="text" th:field="*{responsavel}" class="form-control" autofocus="autofocus" />
@@ -45,22 +45,16 @@
 				<div class="col-sm-2 form-group">
 					<label>Finalizado</label>
 					<select class="form-select" name="finalizado">
-						<option value="false" >Não</option>
-						<option value="true"  th:selected="*{finalizado}">Sim</option>
+						<option value="false">Não</option>
+						<option value="true" th:selected="*{finalizado}">Sim</option>
 					</select>
 				</div>
-			</div>
-
-			<div class="row">
 				<div class="col-sm-12  form-group">
 					<label>Observações</label>
-					<textarea th:field="*{observacoes}" class="form-control" rows="5" maxlength="500" ></textarea>
+					<textarea th:field="*{observacoes}" class="form-control" rows="5" maxlength="500"></textarea>
 				</div>
-			</div>
-
-			<div class="row">
 				<div class="form-group text-center">
-					<button class="btn  btn-primary littleTopSpace" type="submit">Salvar</button>
+					<button class="btn  btn-primary" type="submit">Salvar</button>
 				</div>
 			</div>
 
