--- a/src/main/resources/templates/logged/reuniao/cadastro.html
+++ b/src/main/resources/templates/logged/reuniao/cadastro.html
@@ -21,7 +21,7 @@
 				<span th:utext="${mensagem}"></span>
 			</div>
 
-			<div class="row">
+			<div class="row gy-3">
 				<div class="col-sm-6  form-group">
 					<label>Assunto</label>
 					<input type="text" th:field="*{assunto}" class="form-control" autofocus="autofocus" />
@@ -31,27 +31,21 @@
 					<label>Envolvidos</label>
 					<input type="text" th:field="*{envolvidos}" class="form-control" autofocus="autofocus" />
 				</div>
-				
+
 				<div class="col-sm-2 form-group">
 					<label>Projeto</label>
 					<select class="form-select" name="projeto">
-						<option value="false" >Não</option>
-						<option value="true"  th:selected="*{projeto}">Sim</option>
+						<option value="false">Não</option>
+						<option value="true" th:selected="*{projeto}">Sim</option>
 					</select>
 				</div>
-				
-			</div>
 
-			<div class="row">
 				<div class="col-sm-12  form-group">
 					<label>Observações</label>
-					<textarea th:field="*{observacoes}" class="form-control" rows="5" maxlength="500" ></textarea>
+					<textarea th:field="*{observacoes}" class="form-control" rows="5" maxlength="500"></textarea>
 				</div>
-			</div>
-
-			<div class="row">
 				<div class="form-group text-center">
-					<button class="btn  btn-primary littleTopSpace" type="submit">Salvar</button>
+					<button class="btn  btn-primary" type="submit">Salvar</button>
 				</div>
 			</div>
 
