--- a/src/main/resources/templates/logged/tipoAtividade/cadastro.html
+++ b/src/main/resources/templates/logged/tipoAtividade/cadastro.html
@@ -21,7 +21,7 @@
 				<span th:utext="${mensagem}"></span>
 			</div>
 
-			<div class="row">
+			<div class="row gy-3">
 				<div class="col-sm-5  form-group">
 					<label>Nome</label>
 					<input type="text" th:field="*{nome}" class="form-control" autofocus="autofocus" />
@@ -31,11 +31,9 @@
 					<label>Observações</label>
 					<input type="text" th:field="*{observacoes}" class="form-control" />
 				</div>
-			</div>
 
-			<div class="row">
 				<div class="form-group text-center">
-					<button class="btn  btn-primary littleTopSpace" type="submit">Salvar</button>
+					<button class="btn  btn-primary" type="submit">Salvar</button>
 				</div>
 			</div>
 
