--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,57 +6,51 @@
 
 	<div th:replace="fragments/header :: header"></div>
 
-	<div class="container-fluid">
-		<!-- /.container -->
+	<div class="container-fluid" style="margin-top: 15px;">
 
-		<th:block th:each="item: ${listaPainel}">
-
-			<div class="accordion" id="accordionPanelsStayOpenExample">
-				<div class="accordion-item">
-					<h2 class="accordion-header" th:id="'panelsStayOpen-heading+${item.idTipoAtividade}'">
-						<button class="accordion-button collapsed text-center" type="button" data-bs-toggle="collapse" th:attr="data-bs-target='#panelsStayOpen-collapse'+${item.idTipoAtividade}" aria-expanded="false">
-							<th:block th:utext="${item.nomeTipoAtividade}"></th:block>
-							<th:block th:utext="${item.dataMaisProxima}"></th:block>
-							<a style="margin-left: 20px;" th:href="@{/atividade/atividadeFromHome} + '?idTipoAtividade=' + ${item.idTipoAtividade}"> <i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
-						</button>
-					</h2>
-					<div th:id="'panelsStayOpen-collapse'+${item.idTipoAtividade}" class="accordion-collapse collapse"
-						th:attr="aria-labelledby='#anelsStayOpen-heading'+${item.idTipoAtividade} + ' aria-controls=panelsStayOpen-collapse'+${item.idTipoAtividade}">
-						<div class="accordion-body">
-							<table class="table table-responsive table-bordered table-striped">
-								<thead class="headerTabelaInicial">
-									<tr>
-										<th class="col-sm-3">Texto</th>
-										<th class="col-sm-2">Envolvidos</th>
-										<th class="col-sm-1">Criado</th>
-										<th class="col-sm-1">Controle</th>
-										<th class="col-sm-1">Finalização</th>
-										<th class="col-sm-4">Observações</th>
-
-									</tr>
-								</thead>
-								<tbody>
-									<tr th:each="ativ: ${item.listaAtividades}" th:classappend="${ativ.estiloLinha}">
-										<td>
-											<a th:href="@{/atividade/editar} +'?idAtividade=' +${ativ.id} + '&fromHome='+'true'" th:utext="${ativ.texto}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a>
-										</td>
-										<td th:utext="${ativ.envolvidos}"></td>
-										<td th:utext="${{ativ.dataCriacao}}"></td>
-										<td th:utext="${{ativ.dataExecucao}}"></td>
-										<td th:utext="${{ativ.dataFinalizacao}}"></td>
-										<td th:utext="${ativ.observacoes}"></td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
+		<div class="row gy-3">
+			<div class="form-group col-sm-2 littleTopSpace" th:each="item : ${listaPainel}">
+				<div class="card">
+					<div class="card-header text-center" style="font-weight: bold; color: white" th:utext="${item.nomeTipoAtividade}"></div>
+					<h5 class="card-title" th:utext="|Próxima atividade: ${item.dataMaisProxima}|"></h5>
+					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<div class="text-center" style="margin-bottom: 15px;">
+						<a class="btn btn-primary col-md-4" th:href="@{/home/listagemHome} + '?idTipoAtividade=' + ${item.idTipoAtividade}"> <i class="fa fa-list" aria-hidden="true"></i></a> 
+						<a class="btn btn-primary col-md-4" th:href="@{/atividade/atividadeFromHome} + '?idTipoAtividade=' + ${item.idTipoAtividade}"> <i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
 					</div>
 				</div>
 			</div>
 
+			<div class="form-group card" th:if="${listagemAtividades}">
+				<div class="card-header text-center" style="font-weight: bold; color: white" th:utext="${tipoAtividade.nome}"></div>
 
-		</th:block>
+				<table class="table table-responsive table-bordered table-striped tabelaFiltro">
+					<thead class="headerTabelaInicial">
+						<tr>
+							<th class="col-sm-3">Texto</th>
+							<th class="col-sm-2">Envolvidos</th>
+							<th class="col-sm-1">Criado</th>
+							<th class="col-sm-1">Execução</th>
+							<th class="col-sm-1">Finalização</th>
+							<th class="col-sm-4">Observações</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="ativ: ${listagemAtividades}" th:classappend="${ativ.estiloLinha}">
+							<td>
+								<a th:href="@{/atividade/editar} +'?idAtividade=' +${ativ.id} + '&fromHome='+'true'" th:utext="${ativ.texto}"> <i class="fa fa-pencil" style="padding-right: 10px;"></i></a>
+							</td>
+							<td th:utext="${ativ.envolvidos}"></td>
+							<td th:utext="${{ativ.dataCriacao}}"></td>
+							<td th:utext="${{ativ.dataExecucao}}"></td>
+							<td th:utext="${{ativ.dataFinalizacao}}"></td>
+							<td th:utext="${ativ.observacoes}"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 
-		<!-- /.container -->
+		</div>
 	</div>
 
 	<div th:replace="fragments/footer :: footer"></div>
