--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 				<div class="card">
 					<div class="card-header text-center" style="font-weight: bold; color: white" th:utext="${item.nomeTipoAtividade}"></div>
 					<h5 class="card-title" th:utext="|Próxima atividade: ${item.dataMaisProxima}|"></h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<p class="card-text" th:utext="|Total de atividades: ${item.quantidadeAtividades}|"></p>
 					<div class="text-center" style="margin-bottom: 15px;">
 						<a class="btn btn-primary col-md-4" th:href="@{/home/listagemHome} + '?idTipoAtividade=' + ${item.idTipoAtividade}"> <i class="fa fa-list" aria-hidden="true"></i></a> 
 						<a class="btn btn-primary col-md-4" th:href="@{/atividade/atividadeFromHome} + '?idTipoAtividade=' + ${item.idTipoAtividade}"> <i class="fa fa-plus-square-o" aria-hidden="true"></i></a>
